--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.21",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
